finished rest game and statistics api
